# wxUI

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LATEST_RELEASE_NOTES.md  LICENSE.md  README.md  RELEASE_INSTRUCTIONS.md  vcpkg.json
.github/: copilot-instructions.md  wxwidgets-versions.txt
.github/workflows/: ci_automation.yml  clang-format-check.yml  copyright-check.yml  project-checks.yml  runtests.yml  wxwidgets_3.2_compat.yml  wxwidgets_3.2_macos_compat.yml  wxwidgets_3.2_ubuntu_compat.yml  wxwidgets_3.2_windows_compat.yml  wxwidgets_3.3_compat.yml  wxwidgets_3.3_macos_compat.yml  wxwidgets_3.3_ubuntu_compat.yml  wxwidgets_3.3_windows_compat.yml  wxwidgets_compat_reusable.yml  wxwidgets_compatibility.yml
checklists/: check_buildtests  check_copyright  check_md  check_wxui_includes  do_buildtests  do_copyright  do_md  do_wxui_includes  release.md
cmake/: compiler.cmake  dependencies.cmake  version.cmake  wxUIConfig.cmake.in
docs/: ContributorsGuide.md  DevelopersGuide.md  ProgrammersGuide.md  wxWidgetsCompatibility.md
docs/src/: README.md  make_md.py
docs/src/docs/: ProgrammersGuide.md
examples/: CMakeLists.txt
examples/HelloWidgets/: CMakeLists.txt  ExtendedExample.cpp  ExtendedExample.hpp  HelloWidgets.cpp
examples/HelloWorld/: CMakeLists.txt  ExtendedExample.cpp  ExtendedExample.h  ExtendedExample.hpp  HelloWorld.cpp
include/wxUI/: BindInfo.h  BindInfo.hpp  Bitmap.h  Bitmap.hpp  BitmapButton.h  BitmapButton.hpp  BitmapComboBox.h  BitmapComboBox.hpp  BitmapToggleButton.h  BitmapToggleButton.hpp  BookCtrl.hpp  Button.h  Button.hpp  CalendarCtrl.hpp  CheckBox.h  CheckBox.hpp  Choice.h  Choice.hpp  ColorPickerCtrl.hpp  ComboBox.h  ComboBox.hpp  Custom.h  Custom.hpp  Customizations.hpp  Factory.hpp  ForEach.h  ForEach.hpp  Gauge.h  Gauge.hpp  Generic.h  Generic.hpp  GetterSetter.h  GetterSetter.hpp  HelperMacros.h  HelperMacros.hpp  Hyperlink.h  Hyperlink.hpp  Layout.h  Layout.hpp  LayoutDetails.hpp  (+32 more)
include/wxUI/detail/: BindInfo.hpp  BookDetails.hpp  ForEachDetail.hpp  HelperMacros.hpp  LayoutDetails.hpp  ZapMacros.hpp  fwd.hpp
scripts/: install-hooks.sh  update-version.sh
scripts/git-hooks/: post-commit  pre-commit
tests/: CMakeLists.txt  TestCustomizations.hpp  lsan.supp  wxUI_BitmapButtonTests.cpp  wxUI_BitmapComboBox.cpp  wxUI_BitmapComboBoxTests.cpp  wxUI_BitmapTests.cpp  wxUI_BitmapToggleButtonTests.cpp  wxUI_BookCtrlTests.cpp  wxUI_ButtonTests.cpp  wxUI_CheckBoxTests.cpp  wxUI_ChoiceTests.cpp  wxUI_ColorPickerCtrlTests.cpp  wxUI_ComboBoxTests.cpp  wxUI_CustomTests.cpp  wxUI_FactoryTests.cpp  wxUI_ForEachTests.cpp  wxUI_GaugeTests.cpp  wxUI_GenericTests.cpp  wxUI_GetterSetterTests.cpp  wxUI_HSplitterTests.cpp  wxUI_HyperlinkTests.cpp  wxUI_LayoutIfTests.cpp  wxUI_LayoutTests.cpp  wxUI_LineTests.cpp  wxUI_ListBoxTests.cpp  wxUI_MacroHygieneTests.cpp  wxUI_MenuTests.cpp  wxUI_RadioBoxTests.cpp  wxUI_SizerTests.cpp  wxUI_SliderTests.cpp  wxUI_SpinCtrlTests.cpp  wxUI_TestControlCommon.h  wxUI_TestControlCommon.hpp  wxUI_Tests.cpp  wxUI_Text.cpp  wxUI_TextCtrl.cpp  wxUI_TextCtrlTests.cpp  wxUI_TextTests.cpp  wxUI_VSplitterTests.cpp  (+1 more)
tests/BuildTests/: BindInfo.cpp  Bitmap.cpp  BitmapButton.cpp  BitmapComboBox.cpp  BitmapToggleButton.cpp  BookCtrl.cpp  Button.cpp  CMakeLists.txt  CheckBox.cpp  Choice.cpp  ComboBox.cpp  Custom.cpp  Customizations.cpp  Factory.cpp  ForEach.cpp  Gauge.cpp  Generic.cpp  GetterSetter.cpp  HelperMacros.cpp  Hyperlink.cpp  Layout.cpp  LayoutIf.cpp  Line.cpp  ListBox.cpp  Menu.cpp  Proxy.cpp  RadioBox.cpp  Slider.cpp  SpinCtrl.cpp  Splitter.cpp  Text.cpp  TextCtrl.cpp  Widget.cpp  Wrapper.cpp  ZapChecker.hpp  ZapMacros.cpp  wxUI.cpp  wxUITypes.cpp
